<resources>
    <string name="app_name">Miracle</string>
    <string name="tv_take_photo">Ambil Gambar</string>
    <string name="start_halo">Halo Recycler!</string>
    <string name="start_sentence">MIRACLE aplikasi yang memudahkan anda  untuk memilah sampah daur ulang</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="login_halo">Selamat Datang!</string>
    <string name="login_sentence">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_halo">Hi!</string>
    <string name="signup_sentence">Create your account here</string>
    <string name="logout">Logout</string>
</resources>